Implemented customer repository with JSON file storage

--- a/CManager.Presentation.ConsoleApp/CManager.Presentation.ConsoleApp.csproj
+++ b/CManager.Presentation.ConsoleApp/CManager.Presentation.ConsoleApp.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CManager.Application\CManager.Application.csproj" />
+    <ProjectReference Include="..\CManager.Infrastructure\CManager.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
