--- a/CManager.Presentation.GuiApp/CManager.Presentation.GuiApp.csproj
+++ b/CManager.Presentation.GuiApp/CManager.Presentation.GuiApp.csproj
@@ -13,4 +13,14 @@
     <ProjectReference Include="..\CManager.Infrastructure\CManager.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Veiws\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
